Much miscellaneous progress.

--- a/static/view.css
+++ b/static/view.css
@@ -1,70 +1,4 @@
-#title-input {
-    font-size: 200%;
-    width: 600px;
-}
-
-.label {
-    font-weight: bold;
-    margin-left: 10px;
-    margin-bottom: 7px;
-    margin-top: 5px;
-}
-
-.quiz-question > textarea {
-    width: 600px;
-    height: 200px;
-    margin-left: 10px;
-    font-size: 12pt;
-}
-
-.answers > input.checkbox {
-    margin-left: 30px;
-}
-
-.answers > input.answer {
-    width: 540px;
-    font-size: 12pt;
-}
-
-button {
-    margin: 10px;
-}
-
-input[type="submit"] {
-    margin-top: 11px;
-    padding: 10px;
-}
-
-#title-p {
-	padding: 0.5em 0 0.5em 2.5em;
-	background-color: #2b81af;
-	color: #fff;
-	text-shadow: rgba(0, 0, 0, 0.5) 2px 2px 1px;
-}
-
-#questions {
-    background-color: #D2E0E6;
-    border: thin #D2E0E6 solid;
-    padding: 0.4em 0.5em 0.4em 0.5em;
-}
-
-.quiz-question {
-	margin-top: 0.5em;
-	padding: 1em;
-	
-	background-color: #fff;
-	
-	border-radius: 15px;
-	-moz-border-radius: 15px;
-	-webkit-border-radius: 15px;
-	
-	box-shadow: inset 0px 2px 13px #999;
-	-moz-box-shadow: inset 0px 2px 13px #999;
-	-webkit-box-shadow: inset 0px 2px 13px #999;
-}
-
-/* ****************************** */
-
+/* FIXME */
 /** Font Family and Sizes */
 
 #qunit-tests, #qunit-header, #qunit-banner, #qunit-testrunner-toolbar, #qunit-userAgent, #qunit-testresult {
@@ -130,7 +64,25 @@ input[type="submit"] {
 	cursor: pointer;
 }
 
-#qunit-tests li ol {
+#questions {
+    background-color: #D2E0E6;
+    border: thin #D2E0E6 solid;
+    padding: 0.4em 0.5em 0.4em 0.5em;
+}
+
+.question {
+    margin-left: 10px;
+}
+
+.answers {
+    margin-left: 30px;
+}
+
+.answers > div {
+    padding-bottom: 10px;
+}
+
+.quiz-question {
 	margin-top: 0.5em;
 	padding: 0.5em;
 	
