--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -11,7 +11,7 @@ src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></scr
 </head>
 
 <body>
-<h1 id="qunit-header">Create New Quiz</h1>
+<h1 id="qunit-header">Create New Quiz <a href="/" id="back_up">Koala Quiz</a></h1>
 <h2 id="qunit-banner" class="qunit-pass"></h2>
 
 <div id="title-p"><b class="title-label">Title:</b><br />
