--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -14,7 +14,7 @@ $(function() {
 </head>
 
 <body>
-<h1 id="qunit-header">Take a quiz, or make a quiz.</h1>
+<h1 id="qunit-header">Take a quiz, or make a quiz.  <a href="/" id="back_up">Koala Quiz</a></h1>
 <h2 id="qunit-banner" class="qunit-pass"></h2>
 
 <table id="maintable"><tr>
@@ -26,7 +26,7 @@ $(function() {
 	{% for quiz in quizes %}
 	<li><a href="{{ quiz.link }}">{{ quiz.title }}</li>
 	{% endfor %}
-    </ul>
+      </ul>
   </div>
   </td>
   <td>
