--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -23,7 +23,7 @@ $(function() {
       <h3>Quiz List</h3>
 
       <ul>
-	{% for quiz in quizes %}
+	{% for quiz in quizzes %}
 	<li><a href="{{ quiz.link }}">{{ quiz.title }}</li>
 	{% endfor %}
       </ul>
