--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -15,7 +15,7 @@ $(function() {
 
 <body>
 <h1 id="qunit-header">Take a quiz, or make a quiz.  <a href="/" id="back_up">Koala Quiz</a></h1>
-<h2 id="qunit-banner" class="qunit-pass"></h2>
+<h2 id="qunit-banner"></h2>
 
 <table id="maintable"><tr>
   <td id="quiz-list">
