--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -11,7 +11,7 @@ src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></scr
 
 <body>
 <h1 id="qunit-header">{{ title }} <a href="/" id="back_up">Koala Quiz</a></h1>
-<h2 id="qunit-banner" class="qunit-pass"></h2>
+<h2 id="qunit-banner"></h2>
 
 <div id="questions">
 {% for question in questions %}
