--- a/static/front.css
+++ b/static/front.css
@@ -61,28 +61,22 @@ h3 {
     text-decoration: none;
 }
 
-/* ************* */
-
-/* FIXME */
-/** Font Family and Sizes */
-
-#qunit-tests, #qunit-header, #qunit-banner, #qunit-testrunner-toolbar, #qunit-userAgent, #qunit-testresult {
-	font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
+ul a {
+    font-weight: bold;
+    text-decoration: none;
 }
 
-#qunit-testrunner-toolbar, #qunit-userAgent, #qunit-testresult, #qunit-tests li { font-size: small; }
-#qunit-tests { font-size: smaller; }
+li {
+    margin-bottom: 10px;
+}
 
+/* ************* */
 
-/** Resets */
-
-#qunit-tests, #qunit-tests li ol, #qunit-header, #qunit-banner, #qunit-userAgent, #qunit-testresult {
+#qunit-header, #qunit-banner, #qunit-testresult {
+	font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
 	margin: 0;
 	padding: 0;
 }
-
-
-/** Header */
 
 #qunit-header {
 	padding: 0.5em 0 0.5em 1em;
@@ -98,127 +92,9 @@ h3 {
 }
 
 #qunit-banner {
-	height: 5px;
+    height: 5px;
+    background-color: #C6E746;
 }
-
-#qunit-testrunner-toolbar {
-	padding: 0em 0 0.5em 2em;
-}
-
-#qunit-userAgent {
-	padding: 0.5em 0 0.5em 2.5em;
-	background-color: #2b81af;
-	color: #fff;
-	text-shadow: rgba(0, 0, 0, 0.5) 2px 2px 1px;
-}
-
-ul a {
-    font-weight: bold;
-    text-decoration: none;
-}
-
-li {
-    margin-bottom: 10px;
-}
-
-
-/** Tests: Pass/Fail */
-
-#qunit-tests {
-	list-style-position: inside;
-}
-
-#qunit-tests li {
-	padding: 0.4em 0.5em 0.4em 2.5em;
-	border-bottom: 1px solid #fff;
-	list-style-position: inside;
-}
-
-#qunit-tests li strong {
-	cursor: pointer;
-}
-
-#questions {
-    background-color: #D2E0E6;
-    border: thin #D2E0E6 solid;
-    padding: 0.4em 0.5em 0.4em 0.5em;
-}
-
-.question {
-    margin-left: 10px;
-}
-
-.answers {
-    margin-left: 30px;
-}
-
-.answers > div {
-    padding-bottom: 10px;
-}
-
-.quiz-question {
-	margin-top: 0.5em;
-	padding: 0.5em;
-	
-	background-color: #fff;
-	
-	border-radius: 15px;
-	-moz-border-radius: 15px;
-	-webkit-border-radius: 15px;
-	
-	box-shadow: inset 0px 2px 13px #999;
-	-moz-box-shadow: inset 0px 2px 13px #999;
-	-webkit-box-shadow: inset 0px 2px 13px #999;
-}
-
-#qunit-tests li li {
-	margin: 0.5em;
-	padding: 0.4em 0.5em 0.4em 0.5em;
-	background-color: #fff;
-	border-bottom: none;
-	list-style-position: inside;
-}
-
-/*** Passing Styles */
-
-#qunit-tests li li.pass {
-	color: #5E740B;
-	background-color: #fff;
-	border-left: 26px solid #C6E746;
-}
-
-#qunit-tests li.pass                        { color: #528CE0; background-color: #D2E0E6; }
-#qunit-tests li.pass span.test-name         { color: #366097; }
- 
-#qunit-tests li li.pass span.test-actual,
-#qunit-tests li li.pass span.test-expected  { color: #999999; }
-
-strong b.pass                               { color: #5E740B; }
-
-#qunit-banner.qunit-pass                    { background-color: #C6E746; }
-
-/*** Failing Styles */
-
-#qunit-tests li li.fail {
-	color: #710909;
-	background-color: #fff;
-	border-left: 26px solid #EE5757;
-}
-
-#qunit-tests li.fail                        { color: #000000; background-color: #EE5757; }
-#qunit-tests li.fail span.test-name,
-#qunit-tests li.fail span.module-name       { color: #000000; }
-
-#qunit-tests li li.fail span.test-actual    { color: #EE5757; }
-#qunit-tests li li.fail span.test-expected  { color: green;   }
-
-strong b.fail                               { color: #710909; }
-
-#qunit-banner.qunit-fail, 
-#qunit-testrunner-toolbar                   { background-color: #EE5757; }
-
-
-/** Footer */
 
 #qunit-testresult {
 	padding: 0.5em 0.5em 0.5em 2.5em;
@@ -230,12 +106,4 @@ strong b.fail                               { color: #710909; }
 	-moz-border-radius: 0 0 15px 15px;
 	-webkit-border-bottom-right-radius: 15px;
 	-webkit-border-bottom-left-radius: 15px;	
-}
-
-/** Fixture */
-
-#qunit-fixture {
-	position: absolute;
-	top: -10000px;
-	left: -10000px;
 }
