--- a/static/view.css
+++ b/static/view.css
@@ -1,3 +1,8 @@
+body {
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
 #questions {
     background-color: #D2E0E6;
     border: thin #D2E0E6 solid;
@@ -70,6 +75,6 @@
 #back_up {
     position: absolute;
     color: #F38630;
-    right: 1em;
+    right: 230px;
     text-decoration: none;
 }
