--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html> <head>
 <title>Create New Quiz</title>
 <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/ui-lightness/jquery-ui.css"/>
@@ -21,20 +21,20 @@ src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/jquery-ui.min.js"></scr
 
 <div class="quiz-question">
   <div class="label">Question:</div>
-  <textarea rows="1" cols="1"></textarea><br />
+  <textarea rows="11" cols="64"></textarea><br />
   <div class="label">Answers (check the right one):</div>
   <div class="answers">
     <input type="radio" value="0" name="FIXME" class="checkbox" checked="true">
-    <input type="text" class="answer"><br />
+    <input type="text" class="answer" size="70"><br />
 
     <input type="radio" value="1" name="FIXME" class="checkbox">
-    <input type="text" class="answer"><br />
+    <input type="text" class="answer" size="70"><br />
 
     <input type="radio" value="2" name="FIXME" class="checkbox">
-    <input type="text" class="answer"><br />
+    <input type="text" class="answer" size="70"><br />
 
     <input type="radio" value="3" name="FIXME" class="checkbox">
-    <input type="text" class="answer"><br />
+    <input type="text" class="answer" size="70"><br />
  </div>
 </div>
 
