--- a/static/edit.css
+++ b/static/edit.css
@@ -74,6 +74,8 @@ input[type="submit"] {
 	box-shadow: inset 0px 2px 13px #999;
 	-moz-box-shadow: inset 0px 2px 13px #999;
 	-webkit-box-shadow: inset 0px 2px 13px #999;
+
+	border: thin #ccc solid;
 }
 
 /* ****************************** */
