--- a/static/front.css
+++ b/static/front.css
@@ -52,6 +52,8 @@ h3 {
     box-shadow:  0px 2px 13px #999;
     -moz-box-shadow:  0px 2px 13px #999;
     -webkit-box-shadow:  0px 2px 13px #999;
+
+    border: thin #ccc solid;
 }
 
 #make-quiz-bubble > div {
